<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/dialogTitle"
            android:text="@string/edit"
            android:gravity="center"
            style="?attr/textAppearanceHeadline6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialogEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/editable_text"
            app:expandedHintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialogCancelButton"
                android:layout_margin="16dp"
                android:text="@string/cancel_button"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialogSaveButton"
                android:layout_margin="16dp"
                android:text="@string/save_button"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>



</com.google.android.material.card.MaterialCardView>