<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".fragments.PlantFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/plantContainer"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/plantImageView"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/example"


                    />

            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/plantTitle"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                tools:text="@string/plant_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/plantTitle" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantTitle" />

            <TextView
                android:id="@+id/plantLastDate"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                tools:text="17.02.2023"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/plantContainer"
                app:layout_constraintTop_toBottomOf="@id/plantTitle" />

            <ImageView
                android:id="@+id/editLastData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/plantLastDate" />

            <TextView
                android:id="@+id/plantLastDateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/last_watering"
                app:layout_constraintStart_toEndOf="@id/plantContainer"
                app:layout_constraintTop_toBottomOf="@id/plantLastDate" />

            <TextView
                android:id="@+id/plantNextDate"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                tools:text="21.02.2023"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/plantContainer"
                app:layout_constraintTop_toBottomOf="@id/plantLastDateDesc" />

            <ImageView
                android:id="@+id/editNextData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/plantNextDate" />

            <TextView
                android:id="@+id/plantNextDateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/next_watering"
                app:layout_constraintStart_toEndOf="@id/plantContainer"
                app:layout_constraintTop_toBottomOf="@id/plantNextDate" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/bottomDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/plantContainer" />

            <TextView
                android:id="@+id/plantDescriptionTitle"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottomDivider" />

            <ImageView
                android:id="@+id/editDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/plantDescriptionTitle" />

            <TextView
                android:id="@+id/descEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                tools:text="Условие выращивания и любое другое описание"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plantDescriptionTitle" />

            <TextView
                android:id="@+id/plantEatTitle"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/complementary_food"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descEditText" />

            <ImageView
                android:id="@+id/editFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/plantEatTitle" />

            <TextView
                android:id="@+id/eatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:paddingBottom="25dp"
                tools:text="Информация о подкормках, и т.д."
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plantEatTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>